task #67 registrar deadline en ek create

--- a/issues/templates/issue_form.html
+++ b/issues/templates/issue_form.html
@@ -64,7 +64,7 @@
                                         <!-- <button id="datePickerBtn" type="button" class="btn-icon is-blocked item-block">T</button> -->
                                         <input type="date" 
                                                id="datePickerInput" 
-                                               name="timeline" 
+                                               name="dataLimit"
                                                value="T"
                                         >
                                     </div>
