task #71 bloqueig, desbloqueig i motiu bloqueig al backend

--- a/issues/templates/issue_form.html
+++ b/issues/templates/issue_form.html
@@ -69,7 +69,11 @@
                                         >
                                     </div>
                                     <div>
-                                        <input name="subject" value="B" type="checkbox" id="btnBlock" style="margin-left: 15px;">
+                                        <input name="bloquejat" value="B" type="checkbox" id="btnBlock" style="margin-left: 15px;">
+                                    </div>
+                                    <div>
+                                        <!-- ToDo: Posar macooo! I amb JS perquè només es mostri si estem bloquejant! -->
+                                        <input name="motiuBloqueig">
                                     </div>
                                 </div>
                                 
