Afegit boto Editar bio

--- a/usuaris/templates/usuaris_perfil.html
+++ b/usuaris/templates/usuaris_perfil.html
@@ -59,6 +59,13 @@
                 Hola buenas, timelineContent
             </p>
         </div>
+        <button class="btn-big edit-profile" style="height:60px;">
+            <a href="/issues">
+                <span>
+                    Editar bio
+                </span>
+            </a>
+        </button>
     </div>
 </body>
 
