--- a/issues/templates/issue_bulk.html
+++ b/issues/templates/issue_bulk.html
@@ -18,8 +18,7 @@
                 Afegir nou bulk
             </h2>
             <textarea cols="200" wrap="off" data-linewidth="200" class="ng-pristine ng-empty ng-invalid ng-invalid-required ng-touched"
-                type="text" name="subjects" style="display: block">
-            </textarea>
+                type="text" name="subjects" style="display: block"></textarea>
             <div class="lb-action-wrapper">
                 <button variant="primary" type="submit" title="Save" class="btn-big">
                     Guardar
