--- a/issues/templates/issue_edit.html
+++ b/issues/templates/issue_edit.html
@@ -1,6 +1,8 @@
 {% extends 'base.html' %}
 {% block content %}
 
+<form method="post" enctype="multipart/form-data">
+{% csrf_token %}
 <div class="master">
     <div class="wrapper">
         <div class="main detail">
@@ -18,7 +20,7 @@
                             <div class="detail-ref">
                                 <span class="issue-ref">#{{issue.id}}</span>
                             </div>
-                            <span style="margin-top: 3px; font-size: 25px;" class="detail-subject">{{issue.subject}}</span>
+                            <input name="subject" style="margin-top: 3px; font-size: 25px;" class="detail-subject" value="{{issue.subject}}">
                         </span>
                     </div>
                     <div class="detail-project">
@@ -72,13 +74,27 @@
                         <!-- add attachment-->
                         <div class="options ">
                             <div class="add-attach">
-                                <input type="file" value="+" name="attachment">
+                                <input type="file" value="+" name="document">
+
+                                <!-- ToDo: Posar maco! Que només aparegui quan hi ha un file chosen -->
+
+                                <button type="submit" name="add_attachment">Add attachment</button>
                             </div>
                         </div>
                     </div>
                     <!-- attachment content-->
+
+                <!-- ToDo: Posar macoooo! -->
+
                     <div class="attachment-list sortable">
-                        list attachment
+                        <ul>
+                        {%  for attachment in issue.attachments.all %}
+                            <li>
+                                <a href="{{ attachment.document.url }}">{{ attachment.document.name }}</a>
+                                <span>({{ attachment.document.size|filesizeformat }})</span>
+                            </li>
+                        {% endfor %}
+                        </ul>
                     </div>
                 </section>
 
@@ -186,6 +202,7 @@
         </sidebar>
     </div>
 </div>
+</form>
 
 <!--
     <form method="post" >
