Task #57, 65, 70, icones + name button

--- a/issuePeople/templates/base.html
+++ b/issuePeople/templates/base.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <title>IssuePeople</title>
     <link rel="stylesheet" type="text/css" href="{% static 'css/theme-taiga.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/formStyle.css' %}">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     {% block extra_head %}{% endblock %}
 </head>
 <body>
