--- a/issues/templates/issue_edit.html
+++ b/issues/templates/issue_edit.html
@@ -10,8 +10,8 @@
             <div class="detail-header-container">
                 <!-- Per passar al segunet o anterior issue -->
                 <div class="detail-nav">
-                    <a title="Previous" href="url/previous/issue">arwL</a>
-                    <a title="Next" href="url/next/issue">arwR</a>
+                    <i title="Previous" class="fa fa-arrow-left" aria-hidden="true" href="url/previous/issue"></i>
+                    <i title="Next" class="fa fa-arrow-right" aria-hidden="true" href="url/next/issue"></i>
                 </div>
                 <div class="detail-header">
                     <!-- Titol issue-->
@@ -21,6 +21,9 @@
                                 <span class="issue-ref">#{{issue.id}}</span>
                             </div>
                             <input name="subject" style="margin-top: 3px; font-size: 25px;" class="detail-subject" value="{{issue.subject}}">
+                            <button style="background: none;" type="submit"  name="guardar_subject">
+                                <i style="margin-top: 3px; font-size: 25px;" class="fa fa-floppy-o" aria-hidden="true"></i>
+                            </button>
                         </span>
                     </div>
                     <div class="detail-project">
@@ -57,12 +60,14 @@
                         <textarea placeholder="Empty space is so boring... go on, be descriptive..." 
                         name="descripcio" rows="7" 
                         class="description ng-pristine ng-untouched ng-valid ng-empty"></textarea>
-                        <input style="max-height: 32px;" type="button" name="guardarDescripcio" class="btn-small" value="S">
+                        <button style="max-height: 32px; background: none;" type="submit"  name="guardar_descripcio">
+                            <i  class="fa fa-floppy-o" aria-hidden="true"></i>
+                        </button>
                     </div>
                 </section>
 
                 <!-- Attachments -->
-                <section class="attachments attachments-full">
+                <section style="margin-top: 10px;" class="attachments attachments-full">
                     <!-- attachment header-->
                     <div class="attachments-header">
                         <h3 class="attachment-title">
@@ -77,8 +82,9 @@
                                 <input type="file" value="+" name="document">
 
                                 <!-- ToDo: Posar maco! Que només aparegui quan hi ha un file chosen -->
-
-                                <button type="submit" name="add_attachment">Add attachment</button>
+                                <button type="submit" name="afegir_attachment">
+                                    <i class="fa fa-plus" aria-hidden="true"></i>
+                                </button>
                             </div>
                         </div>
                     </div>
@@ -101,14 +107,27 @@
                 <!-- Comments Activites header -->
                 <section class="history">
                     <nav class="history-tabs">
-                        <a class="history-tab active">0 Comments</a>
-                        <a class="history-tab">Activites</a>
+                        <a class="history-tab active" href="localhost:8000/issues/41/edit/activites">0 Comments</a>
+                        <a class="history-tab" href="localhost:8000/issues/41/edit/activites">Activites</a>
                     </nav>
                 </section>
                 <!-- Comments Activites content -->
                 <section class="comment" >
+                    <div style="display: flex; justify-content: space-between;">
+                        <input type="text" style="margin-top: 5px; margin-bottom: 5px;"> 
+                        <button type="submit" name="afegir_comentari" style="background: none;">
+                            <i class="fa fa-floppy-o" aria-hidden="true"></i>
+                        </button>
+                    </div>
                     <div class="commmetns-wrapper">
-                        list of coments
+                        {%  for desc in issue.descripcio %}
+                            <div >
+                                <!--    <img url/desc.user> -->
+                                <span>{{ desc.user }}</span>
+                                <span>{{ desc.date }}</span>
+                                <span>{{ desc.name }}</span>
+                            </div>
+                        {% endfor %}
                     </div>
                 </section>
 
@@ -120,7 +139,7 @@
                     <span>Open</span>
                 </span>
                 <!-- status-->
-                <select name="estat" class="status-button">
+                <select style="margin-left: 10px;" name="guardar_estat" type="submit" class="status-button">
                     {% for estat in form.estat %}
                         <option value="{{estat}}">{{estat}}</option>
                     {% endfor %}    
@@ -129,21 +148,21 @@
             <section class="ticket-section ticket-data-container">
                 <div class="ticket-data-container">
                     <!-- Type-->
-                    <select name="tipus" class="status-button">
+                    <select name="guardar_tipus" type="submit" class="status-button">
                         {% for tipus in form.tipus %}
                             <option value="{{tipus}}">{{tipus}}</option>
                         {% endfor %}
                     </select>
 
                     <!-- Severity-->
-                    <select name="gravetat" class="status-button">
+                    <select name="guardar_gravetat" type="submit" class="status-button">
                         {% for gravetat in form.gravetat %}
                             <option value="{{gravetat}}">{{gravetat}}</option>
                         {% endfor %}
                     </select>
                     
                     <!-- Priority-->
-                    <select name="prioritat" class="status-button">
+                    <select name="guardar_prioritat" type="submit" class="status-button">
                         {% for prioritat in form.prioritat %}
                             <option value="{{prioritat}}">{{prioritat}}</option>
                         {% endfor %}
@@ -182,20 +201,28 @@
             </section>
             <!-- setting Section-->
             <section class="ticket-section ticket-detail-settings">
-                <div class="ticket-detail-settings">
+                <div class="ticket-detail-settings" >
                     <div>
-                        <!-- <button id="datePickerBtn" type="button" class="btn-icon is-blocked item-block">T</button> -->
-                        <input type="date" 
-                               id="datePickerInput" 
-                               name="timeline" 
-                               value="T"
+                        <!-- obrir desplegable per triar date -->
+                        <button style="background: none;">
+                            <i style="width: 10px; height:10px" class="fa fa-clock-o" aria-hidden="true"></i>
+                        </button>
+                        <input 
+                            
+                            type="date" 
+                            id="datePickerInput" 
+                            name="guardar_dataLimit" 
+                            value="T"
+                            style="display: none;"
                         >
                     </div>
                     <div>
-                        <input name="subject" value="B" type="checkbox" id="btnBlock" style="margin-left: 15px;">
+                        <button style="margin-left: 15px; background: none;" type="submit" name="guardar_bloquejat">
+                            <i class="fa fa-lock" aria-hidden="true"></i>
+                        </button>
                     </div>
                     <div>
-                        <input name="subject" value="D" type="button" id="btnBlock" style="margin-left: 15px;">
+                        <i style="margin-left: 15px;" class="fa fa-trash-o" aria-hidden="true" href="esborrar_issue"></i>
                     </div>
                 </div>
             </section>
