--- a/usuaris/templates/usuaris_singUp.html
+++ b/usuaris/templates/usuaris_singUp.html
@@ -6,7 +6,11 @@
     <div class="wrapper">
         <div class="auth">
             <div class="auth-container">
-                <div class="logo-svg"></div>
+                <div class="logo-svg">
+                    <img src="https://static9.depositphotos.com/1010305/1139/i/600/depositphotos_11390423-stock-photo-kitten-on-a-white-background.jpg"
+                    width="200"
+                    height="200">
+                </div>
                 <h1 class="logo">Taiga</h1>
                 <h2 class="tagline">LOVE YOUR PROJECT</h2>
                 <div class="login-form-container">
