--- a/issues/templates/issue_edit.html
+++ b/issues/templates/issue_edit.html
@@ -222,7 +222,9 @@
                         </button>
                     </div>
                     <div>
-                        <i style="margin-left: 15px;" class="fa fa-trash-o" aria-hidden="true" href="esborrar_issue"></i>
+                        <a href="{% url 'esborrar_issue' issue.id %}">
+                            <i style="margin-left: 15px;" class="fa fa-trash-o" aria-hidden="true"></i>
+                        </a>
                     </div>
                 </div>
             </section>
